[gd_scene load_steps=7 format=2]

[ext_resource path="res://Textures/HealthBar.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Menu.gd" type="Script" id=2]
[ext_resource path="res://Menu.stylebox" type="StyleBox" id=3]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 1, 8 )
modulate_color = Color( 0.494118, 0, 0, 1 )

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 1, 8 )
modulate_color = Color( 0.686275, 0, 0, 1 )

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 1, 8 )
modulate_color = Color( 0.270588, 0.627451, 0.0705882, 1 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="."]
modulate = Color( 0.462745, 1, 0, 1 )
margin_left = 275.478
margin_top = 44.8011
margin_right = 375.478
margin_bottom = 61.8011
rect_scale = Vector2( 5.2, 5.39453 )
text = "StealthFormer"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackGround" type="Sprite" parent="."]
modulate = Color( 0.282353, 0.180392, 0.309804, 1 )
position = Vector2( 481.711, 291.905 )
scale = Vector2( 1307.03, 104.126 )
z_index = -1
texture = ExtResource( 1 )

[node name="PlayScreen" type="Control" parent="."]
pause_mode = 2
visible = false
margin_left = 184.0
margin_top = 161.0
margin_right = 857.0
margin_bottom = 534.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tutorial" type="Button" parent="PlayScreen"]
margin_left = 223.809
margin_top = 28.6214
margin_right = 429.809
margin_bottom = 64.6214
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/normal = ExtResource( 3 )
text = "Tutorial"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level1" type="Button" parent="PlayScreen"]
margin_left = 223.809
margin_top = 79.8035
margin_right = 429.809
margin_bottom = 115.804
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/normal = ExtResource( 3 )
text = "Level 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level2" type="Button" parent="PlayScreen"]
margin_left = 223.468
margin_top = 130.211
margin_right = 429.468
margin_bottom = 166.0
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/normal = ExtResource( 3 )
text = "Level 2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level3" type="Button" parent="PlayScreen"]
margin_left = 223.468
margin_top = 179.564
margin_right = 429.468
margin_bottom = 215.352
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/normal = ExtResource( 3 )
text = "Level 3"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level4" type="Button" parent="PlayScreen"]
margin_left = 223.385
margin_top = 229.733
margin_right = 429.385
margin_bottom = 265.521
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/normal = ExtResource( 3 )
text = "Level 4"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level5" type="Button" parent="PlayScreen"]
margin_left = 223.385
margin_top = 278.362
margin_right = 429.385
margin_bottom = 314.15
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/normal = ExtResource( 3 )
text = "Level 5"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Button" parent="PlayScreen"]
margin_left = -123.014
margin_top = 304.585
margin_right = -32.0144
margin_bottom = 324.585
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 1 )
custom_styles/normal = SubResource( 1 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuScreen" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="MenuScreen"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 377.442
margin_top = 410.639
margin_right = 598.442
margin_bottom = 485.639
rect_pivot_offset = Vector2( 111.09, 36.1996 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 2 )
text = "QUIT"

[node name="Play" type="Button" parent="MenuScreen"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 418.983
margin_top = 288.807
margin_right = 560.983
margin_bottom = 324.807
rect_scale = Vector2( 2.98469, 2.88805 )
rect_pivot_offset = Vector2( 71.0097, 15.8058 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 3 )
text = "PLAY"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="PlayScreen/Tutorial" to="." method="_on_Tutorial_pressed"]
[connection signal="pressed" from="PlayScreen/Level1" to="." method="_on_Level1_pressed"]
[connection signal="pressed" from="PlayScreen/Level2" to="." method="_on_Level2_pressed"]
[connection signal="pressed" from="PlayScreen/Level3" to="." method="_on_Level3_pressed"]
[connection signal="pressed" from="PlayScreen/Level4" to="." method="_on_Level4_pressed"]
[connection signal="pressed" from="PlayScreen/Level5" to="." method="_on_Level5_pressed"]
[connection signal="pressed" from="PlayScreen/Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="MenuScreen/Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="MenuScreen/Play" to="." method="_on_Play_pressed"]
